--- a/package.json
+++ b/package.json
@@ -1,47 +1,50 @@
 {
   "name": "ae-resume-generator",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "AE Resume Generator",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack serve --mode=development --hot --open",
-    "build": "webpack --mode=development --hot"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/CPSC319-Winter-term-2/Scope-Creep-AE-Frontend.git"
-  },
-  "author": "Scope Creep",
+  "author": "Team Scope Creep",
   "license": "BSD-3-Clause",
-  "bugs": {
-    "url": "https://github.com/CPSC319-Winter-term-2/Scope-Creep-AE-Frontend/issues"
-  },
-  "homepage": "https://github.com/CPSC319-Winter-term-2/Scope-Creep-AE-Frontend#readme",
-  "devDependencies": {
-    "@babel/cli": "^7.17.0",
-    "@babel/core": "^7.17.2",
-    "@babel/preset-env": "^7.16.11",
-    "@babel/preset-react": "^7.16.7",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.4",
-    "babel-loader": "^8.2.3",
-    "css-loader": "^6.6.0",
-    "react-refresh": "^0.11.0",
-    "style-loader": "^3.3.1",
-    "webpack": "^5.68.0",
-    "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.7.4"
-  },
+  "private": true,
   "dependencies": {
-    "@emotion/react": "^11.7.1",
-    "@emotion/styled": "^11.6.0",
-    "@mui/icons-material": "^5.4.1",
-    "@mui/material": "^5.4.1",
-    "@mui/system": "^5.4.1",
+    "@emotion/react": "^11.8.1",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.4.2",
+    "@mui/material": "^5.4.2",
+    "@mui/system": "^5.4.2",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.3",
+    "@testing-library/user-event": "^13.5.0",
+    "clean": "^4.0.2",
     "react": "^17.0.2",
     "react-dnd": "^15.1.1",
     "react-dnd-html5-backend": "^15.1.2",
     "react-dom": "^17.0.2",
-    "react-split": "^2.0.14"
+    "react-scripts": "5.0.0",
+    "react-split": "^2.0.14",
+    "web-vitals": "^2.1.4"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
