Fixed request header auth token not refreshing (#99)
* Fixed request header auth token not refreshing

* Move base url to env

--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,3 @@
 REACT_APP_AUTH_REDIRECT_URI=https://nice-ground-01f8e4010.1.azurestaticapps.net/auth/login-callback
 REACT_APP_POST_LOGOUT_REDIRECT_URI=https://nice-ground-01f8e4010.1.azurestaticapps.net/login
+REACT_APP_API_BASE_URL=https://ae-resume-api.azurewebsites.net/
