--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "clean": "^4.0.2",
+    "file-saver": "^2.0.5",
     "oidc-client-ts": "^2.0.1",
     "react": "^17.0.2",
     "react-dnd": "^15.1.1",
