--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.26.1",
     "clean": "^4.0.2",
     "file-saver": "^2.0.5",
+    "lodash": "^4.17.21",
     "oidc-client-ts": "^2.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
