--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,3 @@
 REACT_APP_AUTH_REDIRECT_URI=http://localhost:3000/auth/login-callback
 REACT_APP_POST_LOGOUT_REDIRECT_URI=http://localhost:3000/login
-REACT_APP_API_BASE_URL=https://ae-resume-api.azurewebsites.net/
+REACT_APP_API_BASE_URL=https://localhost:5001/
