--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
-REACT_APP_AUTH_REDIRECT_URI=https://nice-ground-01f8e4010.1.azurestaticapps.net/auth/login-callback
-REACT_APP_POST_LOGOUT_REDIRECT_URI=https://nice-ground-01f8e4010.1.azurestaticapps.net/login
-REACT_APP_API_BASE_URL=https://ae-resume-api.azurewebsites.net/
+REACT_APP_AUTH_REDIRECT_URI=http://<YOUR_IP_HERE>:3000/auth/login-callback
+REACT_APP_POST_LOGOUT_REDIRECT_URI=http://<YOUR_IP_HERE>:3000/login
+REACT_APP_API_BASE_URL=https://<YOUR_IP_HERE>:5001/
